--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,8 @@
                     <figure class="fs-5 mb-4">
                     <h1 class="display-5 fw-bold text-white">Fruktnøtt</h1>
                         <blockquote class="blockquote">
-                            <p>Å bli servert Fruktnøtt er en straff, ikke en premie. Når sjokoladene skal ha fest, inviterer de ikke Fruktnøtt. Den kan kanskje få en invitasjon når kli, belgfrukt, brennesle og tofu skal arrangere noe, men knapt nok.</å>
+                            <p>“Å bli servert Fruktnøtt er en straff, ikke en premie.<p>
+                            <p>Når sjokoladene skal ha fest, inviterer de ikke Fruktnøtt. Den kan kanskje få en invitasjon når kli, belgfrukt, brennesle og tofu skal arrangere noe, men knapt nok.</å>
 
                             <p>Fruktnøtt er djevelens verk, noe som ble funnet på for som et slags mottiltak til livets gleder, som god mat, Viking-kamper, myke damer og skikkelig sjokolade. På norrønt betyr «Fruktnøtt» rett og slett «ondskap», og i Snorre-sagaen kan vi lese at: «Så kvad Eigil Kjønneson; drep meg, herre, men ikkje med Fruktnøtt. Så slo han i hjel seg sjølvum og alle dei rundtum». Det er bare galninger, orienteringsløpere, psykopater og andre østlendinger som liker Fruktnøtt.</p>
                             <ul>
@@ -49,11 +50,10 @@
                                 <li>I gamledager serverte de Fruktnøtt til landssvikere, borgerlige konfirmanter, hedninger og folk som ble tatt for blotting, ikke respekterte kviledagen eller nektet å hedre sin far og sin mor.</li>
                                 <li>Einar Gerhardsen sidestilte det å spise Fruktnøtt med å snyte på skatten, eller å stemme på Høyre. På 80-tallet ble det sendt en kasse Fruktnøtt fra Vardeneset Røde Kors til Etiopia. Den ble sendt i retur, for det fikk liksom være måte på.</li>
                             </ul>
-                            <br />
-                            <p>Ungdom: Ikke prøv Fruktnøtt.</p>
+                            <p><em>Ungdom: Ikke prøv Fruktnøtt."</em></p>
                         </blockquote>
-                        <figcaption class="blockquote-footer">
-                            Leif Tore Lindø, journalist i <cite title="Source Title">Stavanger Aftenblad</cite>
+                        <figcaption class="blockquote-footer mt-1">
+                            Leif Tore Lindø, <cite title="Source Title">Stavanger Aftenblad</cite>
                         </figcaption>
                     </figure>
                     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
